[gd_scene load_steps=8 format=2]

[ext_resource path="res://Util/Imaging/Dolly/Dolly.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/Icons/ColorOpenMoji/down.svg" type="Texture" id=2]
[ext_resource path="res://Util/Imaging/DrawPath/Path/Path.gd" type="Script" id=3]

[sub_resource type="SphereMesh" id=1]
radius = 10.0
height = 20.0

[sub_resource type="SpatialMaterial" id=2]
flags_vertex_lighting = true
albedo_color = Color( 0.0509804, 0.0627451, 0.380392, 1 )
metallic = 0.2
emission_enabled = true
emission = Color( 0.247059, 0.603922, 0.980392, 1 )
emission_energy = 4.4
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 2
albedo_texture = ExtResource( 2 )

[sub_resource type="Curve3D" id=4]
resource_local_to_scene = true
_data = {
"points": PoolVector3Array(  ),
"tilts": PoolRealArray(  )
}

[node name="PathScene" type="Spatial"]
script = ExtResource( 3 )

[node name="Focus" type="CSGMesh" parent="." groups=[
"SpatialShifting",
]]
layers = 64
cast_shadow = 0
mesh = SubResource( 1 )
material = SubResource( 2 )

[node name="Sprite3D" type="Sprite3D" parent="Focus"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 42.5536, 0 )
layers = 64
material_override = SubResource( 3 )
cast_shadow = 0
modulate = Color( 0.152941, 0.254902, 0.352941, 1 )
pixel_size = 0.4
texture = ExtResource( 2 )

[node name="Path" parent="." instance=ExtResource( 1 )]
curve = SubResource( 4 )

[node name="ViewportContainer" parent="Path/PathFollow" index="1"]
visible = false

[node name="RecordingViewport" parent="Path/PathFollow/ViewportContainer" index="0"]
render_target_update_mode = 0

[node name="DollyCamera" parent="Path/PathFollow/ViewportContainer/RecordingViewport" index="0"]
visible = false
far = 10000.0
path_follow_nodepath = NodePath("../../..")

[editable path="Path"]
